# pikaur

./: .bandit  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pylintrc  .travis.yml  .vimrc  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile_export  Dockerfile_test  Makefile  PKGBUILD  PKGBUILD_dev_deps  README.md  README_pt.md  README_pt_BR.md  aur.py  dirs.txt  mypy.ini  pikaur.1  pikaur.py  pyproject.toml  readme.md  run_tests.py  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: spam-remover.yml  tests.yml
locale/: da.po  da.po~  de.po  de.po~  es.po  es.po~  fr.po  hu.po  is.po  it.po  ja.po  nl.po  pt.po  pt.po~  pt_BR.po  ru.po  ru.po~  ru.ro  sv.po  tr.po  tr.po~  uk.po  zh_CN.po  zh_cn.po
maintenance_scripts/: Dockerfile  changelog.sh  ci.sh  coverage.sh  coveralls_PKGBUILD  dev_docker_container.sh  discover_tests_per_worker.py  docker_push.sh  docker_test.sh  find_aur_pkgs_with_double_requirements.py  find_conflicting_aur_pkgs.py  find_split_pkgs.py  get_global_expressions.sh  get_non_final_expressions.sh  lint.sh  makefile_shellcheck.py  pidowngrade.py  pikaman.py  short_opts.sh  show_recent_history.sh  tag_release.sh  vulture.sh  vulture_whitelist.py
maintenance_scripts/mypy_stubs/: pyalpm.pyi
maintenance_scripts/mypy_stubs/pycman/: config.pyi
packaging/usr/lib/systemd/user/: pikaur-cache.service  pikaur-cache.timer
packaging/usr/share/bash-completion/completions/: pikaur
packaging/usr/share/fish/completions/: pikaur.fish
packaging/usr/share/fish/vendor_completions.d/: pikaur.fish
packaging/usr/share/pikaur/examples/: pikaur-cache.hook
packaging/usr/share/zsh/site-functions/: _pikaur
pikaur/: '  __init__.py  alpm.py  argparse.py  argparse_extras.py  args.py  async.py  async_cmd.py  async_net.py  aur.py  aur_deps.py  build.py  config.py  conflicts.py  core.py  exceptions.py  filelock.py  getpkgbuild_cli.py  help_cli.py  i18n.py  info_cli.py  install_cli.py  install_info_fetcher.py  lock.py  logging.py  logging_extras.py  main.py  makepkg_config.py  meta_package.py  news.py  os_utils.py  package_update.py  pacman.py  pacman_fallback.py  pacman_i18n.py  pikaprint.py  pikasay.py  pikatypes.py  pikspect.py  pkg_cache_cli.py  (+15 more)
pikaur/extras/: __init__.py  dep_tree.py
pikaur_meta_helpers/: __init__.py  __main__.py  dep_tree.py  find_aur_pkgs_with_aur_deps.py  find_aur_pkgs_with_double_requirements.py  find_aur_pkgs_with_notinstalled_builddeps.py  find_conflicting_aur_and_repo_pkgs.py  find_conflicting_aur_pkgs.py  find_split_aur_pkgs.py  pidowngrade.py  util.py
pikaur_static/: .gitignore  PKGBUILD  build-nuitka-new.fish  build-nuitka-standalone-new.fish  make.fish  pacman_fallback.py  pikaur  pikaur-static.py  pyalpm.py  pypyalpm.py
pikaur_static/pycman/: __init__.py  action_database.py  action_deptest.py  action_query.py  action_remove.py  action_sync.py  action_upgrade.py  action_version.py  config.py  pkginfo.py  transaction.py
pikaur_test/: .SRCINFO  PKGBUILD_build_error  PKGBUILD_not_found_dep  PKGBUILD_placeholder  PKGBUILD_runtime_deps  PKGBUILD_version_mismatch_aur  PKGBUILD_version_mismatch_repo  fake_makepkg  helpers.py  test_arch_wiki.py  test_basic.py  test_cache_cli.py  test_cli.py  test_db.py  test_errors.py  test_news.py  test_regressions.py  test_sysupgrade.py  test_unit.py  test_unit_config.py  test_unit_core.py  test_unit_main.py  test_unit_pacman.py  test_unit_pikatypes.py  test_unit_pikspect.py  test_unit_provider.py  test_unit_urllib.py  test_unit_version.py  test_zzz_run_last.py
